package saborescerrado.jp.tp2.dto;

public record CidadeDTO(
    String nome,
    Long estadoId
) {}
