package saborescerrado.jp.tp2.dto;

public record EstadoDTO(
    String nome,
    String sigla
) {}
