package saborescerrado.jp.tp2.dto;

public record ItemCompraDTO(
    Integer quantidade,
    Double precoUnitario,
    Long licorId
) {}
