package saborescerrado.jp.tp2.model;

public enum FormaPagamento {
    CARTAO,
    PIX,
    BOLETO
}
