package saborescerrado.jp.tp2.model;

import jakarta.persistence.Entity;

@Entity
public class Ingrediente extends EntityClass {

    private String nome;
    
    private Double quantidade;
    
    private String unidadeMedida;

    // Getters and Setters
    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    public Double getQuantidade() {
        return quantidade;
    }

    public void setQuantidade(Double quantidade) {
        this.quantidade = quantidade;
    }

    public String getUnidadeMedida() {
        return unidadeMedida;
    }

    public void setUnidadeMedida(String unidadeMedida) {
        this.unidadeMedida = unidadeMedida;
    }
}
