package saborescerrado.jp.tp2.model;

public enum Perfil {
    ADMIN,
    USER
}
