package saborescerrado.jp.tp2.model;

public enum StatusPedido {
    PENDENTE,
    APROVADO,
    CANCELADO,
    ENVIADO,
    ENTREGUE
}
