package saborescerrado.jp.tp2.model;

public enum TipoLicor {
    FRUTADO,
    MEL
}
